Feat: Implement SocialMidia List Frontend
